final_notebook_mobile_price_prediction_Nikitha_KR.ipynb

--- a/final_notebook_mobile_price_prediction_Nikitha_KR.ipynb
+++ b/final_notebook_mobile_price_prediction_Nikitha_KR.ipynb
@@ -9,9 +9,7 @@
       "source": [
         "**In the competitive mobile phone market companies want\n",
         "to understand sales data of mobile phones and factors which drive the prices.\n",
-        "The objective is to find out some relation between features of a mobile phone(eg:- RAM,\n",
-        "Internal Memory, etc) and its selling price. In this problem, we do not have to predict the\n",
-        "actual price but a price range indicating how high the price is**\n"
+        "The objective is to predict the mobile can be low/med/high/very high**\n"
       ]
     },
     {
