--- a/final_notebook_mobile_price_prediction_Nikitha_KR.ipynb
+++ b/final_notebook_mobile_price_prediction_Nikitha_KR.ipynb
@@ -5294,15 +5294,13 @@
       "source": [
         "\n",
         "\n",
-        "1.  From EDA we can see that here are mobile phones in 4 price ranges. The    number of elements is almost similar. \n",
+        "1.  From EDA we can see that here are mobile phones in 4 price ranges.he    number of elements is almost similar. \n",
         "2.  half the devices have Bluetooth, and half don’t\n",
         "3.   there is a gradual increase in battery as the price range increases\n",
         "4.   Ram has continuous increase with price range while moving from Low cost to Very high cost\n",
         "5.   costly phones are lighter\n",
         "6.   RAM, battery power, pixels played more significant role in deciding the price range of mobile phone. \n",
         "7.   form all the above experiments we can conclude that logistic regression and, XGboosting with using hyperparameters we got the best results\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "\n",
@@ -5317,7 +5315,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": " final notebook_mobile price range prediction-Apoorva KR.ipynb",
+      "name": " final notebook_mobile price range prediction-Nikitha KR.ipynb",
       "provenance": []
     },
     "kernelspec": {
