--- a/Mobile_price_prediction_Nikitha_KR.ipynb
+++ b/Mobile_price_prediction_Nikitha_KR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlABgPCBVBaPQ1zWlKhaaV",
+      "authorship_tag": "ABX9TyPDpDZpKwMc+pzN2r8A/vYG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -60,7 +60,7 @@
         "        \"colab_type\": \"text\"\n",
         "      },\n",
         "      \"source\": [\n",
-        "        \"<a href=\\\"https://colab.research.google.com/github/NikithaaKR12695/Mobile-Price-Prediction/blob/main/mobile_price_prediction_Nikitha_KR.ipynb\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>\"\n",
+        "        \"<a href=\\https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>\"\n",
         "      ]\n",
         "    },\n",
         "    {\n",
