--- a/Mobile_price_prediction_Nikitha_KR.ipynb
+++ b/Mobile_price_prediction_Nikitha_KR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDpDZpKwMc+pzN2r8A/vYG",
+      "authorship_tag": "ABX9TyNspChoKmG/gWq7iCRILtsb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -60,7 +60,7 @@
         "        \"colab_type\": \"text\"\n",
         "      },\n",
         "      \"source\": [\n",
-        "        \"<a href=\\https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>\"\n",
+        "        \"<a href=\\\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb\"\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>\"\n",
         "      ]\n",
         "    },\n",
         "    {\n",
