Mobile_price_prediction_Nikitha.ipynb

--- a/Mobile_price_prediction_Nikitha.ipynb
+++ b/Mobile_price_prediction_Nikitha.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha.ipynb"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
