Mobile_price_prediction_Nikitha.ipynb

--- a/Mobile_price_prediction_Nikitha.ipynb
+++ b/Mobile_price_prediction_Nikitha.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha.ipynb"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,7 +60,7 @@
         "        \"colab_type\": \"text\"\n",
         "      },\n",
         "      \"source\": [\n",
-        "        \"<a href=\\\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha_KR.ipynb\"\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>\"\n",
+        "        \"<a href=\\\"https://colab.research.google.com/github/dulamnikitha1412/Mobile_Price_prediction/blob/main/Mobile_price_prediction_Nikitha.ipynb\"\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>\"\n",
         "      ]\n",
         "    },\n",
         "    {\n",
@@ -5068,7 +5068,7 @@
         "  \"metadata\": {\n",
         "    \"accelerator\": \"GPU\",\n",
         "    \"colab\": {\n",
-        "      \"name\": \"mobile price range prediction-Apoorva KR.ipynb\",\n",
+        "      \"name\": \"mobile price prediction-Nikitha.ipynb\",\n",
         "      \"provenance\": [],\n",
         "      \"authorship_tag\": \"ABX9TyN/CprlXHQdfx49gtetXU6G\",\n",
         "      \"include_colab_link\": true\n",
